--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,139 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+body {
+    padding-top: 3em;
+
+}
+h1, h2, h3, h4, h5 {
+    font-size: 1em;
+    text-transform: uppercase;
+}
+
+img {
+    max-width: 100%;
+}
+
+.page-header {
+    background-color: #000;
+    color: white;
+    padding: 1em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+
+}
+
+.page-header h1 {
+    margin: 0;
+}
+
+.page-header .main-nav {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+}
+
+.page-section {
+    padding: 1em;
+    border-bottom: 1px solid #ddd;
+}
+
+.btn {
+    display: inline-block;
+    font-size: 1.25em;
+    border: 0.125em solid #000;
+    padding: 0.75em;
+    text-decoration: none;
+    color: #000;
+}
+
+.btn:hover {
+    background color: #000;
+    color: #fff;
+}
+
+.jumbotron {
+    padding: 0;
+    position: relative;
+}
+
+.jumbotron_bg {
+    display: block;
+    position: relative;
+    z-index: -10;
+    width: 100%;
+}
+
+.jumbotron_content {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%,-50%);
+    text-align: center;
+    line-height: 1;
+    color: #fff;
+}
+
+.jumbotron_content h2 {
+    margin-top: 0;
+    font-size: 3em;
+    color: #fff;
+}
+
+.jumbotron_content .btn {
+    color: #fff;
+    border-color: #fff;
+}
+
+.jumbotron_content .btn:hover {
+    color: #000;
+    background-color: #fff;
+}
+
+.project-thumb {
+    position: relative;
+    width: 50%;
+    float: left;
+    background-color: hsla(0, 100%, 100%, 0.75);
+    border: 1px solid white;
+}
+
+.project-thumb:hover {
+    background-color: hsla(0, 0%, 0%, 0.5);
+}
+.project-thumb img {
+    position: relative;
+    z-index: -10;
+}
+
+.project-thumb h3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    text-align: center;
+    color: #000;
+}
+
+.project-thumb:hover h3 {
+    color: #fff;
+}
+
+.page-footer {
+    text-align: center;
+}
 
 
 
